working battery canvas

--- a/app/index.html
+++ b/app/index.html
@@ -35,8 +35,10 @@
 
 <nav class="navbar navbar-default">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Battery Calculator
+      <a class="navbar-brand" href="#">
+        Battery Calculator       
       </a>
+      
     </div>
 </nav>
 <div class="container-fluid">
